--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  overflow: hidden;
-  body {
+  overflow-x: hidden;
   overflow-y: auto;
 }
 
