--- a/style.css
+++ b/style.css
@@ -7,20 +7,21 @@
   font-display: swap;
 }
 
-html, body {
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  min-height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
   margin: 0;
   padding: 2rem;
   font-family: 'Times New Roman', serif;
   color: white;
   text-align: center;
   position: relative;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
-  background-image: url('images/background.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 html::before {
