--- a/style.css
+++ b/style.css
@@ -7,28 +7,28 @@
   font-display: swap;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Times New Roman', serif;
-  color: white;
-  text-align: center;
+html {
   height: 100%;
-  min-height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 body {
+  margin: 0;
   padding: 2rem;
+  font-family: 'Times New Roman', serif;
+  color: white;
+  text-align: center;
   position: relative;
+  min-height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
   background-image: url('images/background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-html::before {
+body::before {
   content: "";
   position: fixed;
   top: 0;
